<resources>
    <string name="app_name">Shinobi Quiz</string>
    <string name="loading">Yükleniyor…</string>
    <string name="zero">0</string>
    <string name="use_viewmodel">ViewModel Kullan</string>
    <string name="increase_counter">Sayacı Arttır</string>
    <string name="counter_menu">Sayaç</string>
    <string name="guess_menu">Tahmin</string>
    <string name="refresh_describtion">yenile</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="reset">Sıfırla</string>
    <string name="guess">Tahmin</string>
    <string name="success">Başarılı</string>
    <string name="failure">Tekrar Dene</string>
    <string name="change_image">Change Image</string>
    <string name="pokemon">pokemon</string>
    <string name="error">Hata Oluştu</string>
    <string name="emptyImageUrl">https://static.wikia.nocookie.net/naruto/images/7/7d/Naruto_Part_II.png</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign in</string>
    <string name="null_space">Boş bırakmayınız</string>
    <string name="sign_in_error">Email or password wrong</string>
    <string name="wrong_password">Wrong password</string>
    <string name="recovery_error">Email wrong</string>
    <string name="username_too_long">Username can\'t be over 16 characters</string>
    <string name="password_too_low">Password can\'t be less than 8 characters</string>
    <string name="network_problem">There is an problem</string>
    <string name="check_mail">Check your mail</string>
    <string name="reset_mail_sent">Password reset link sent to your email</string>
    <string name="recovery_user_not_found">No account found with this email</string>
    <string name="recovery_too_many_request">Too many attempts, try again later</string>
    <string name="sign_success">Kayıt olundu</string>
    <string name="email">Email</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up">Sign up</string>
    <string name="slash">/</string>
    <string name="user_name">User Name</string>
    <string name="welcome_shinobi">Welcome Shinobi</string>
    <string name="recovery">Recovery</string>
    <string name="naruto_image">Naruto Image</string>
    <string name="google_icon">Google Icon</string>
    <string name="game_content">game content</string>
    <string name="quizes">Quizzes</string>
    <string name="tier_list">Tier List</string>
    <string name="user_info">User Info</string>
    <string name="close_game">Close game</string>
    <string name="first_option">First option</string>
    <string name="second_option">Second Option</string>
    <string name="check">Check</string>
    <string name="leaders">Leaders</string>
    <string name="classic_game">Classic Game</string>
    <string name="challenge">Challenge</string>
    <string name="classic">Classic</string>
    <string name="akatsuki">Challenge</string>
    <string name="clan">Clan</string>
    <string name="tail">Tail</string>
    <string name="team">Team</string>
    <string name="rank">Rank</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="game_over">Game Over</string>
    <string name="main_screen">Main screen</string>
    <string name="play_again">Play Again</string>
    <string name="trueText">True</string>
    <string name="wrong">Wrong</string>
    <string name="ad">Watch ad</string>
    <string name="emptyAd">There is no avaiable add, try again in 3 minute</string>
    <string name="family_question">Hangisinin %1$s</string>
    <string name="voice_question">Which one\'s %1$s</string>
    <string name="clan_question">Which one\'s clan name is %1$s</string>
    <string name="team_question">Which one\'s team name is %1$s</string>
    <string name="jinckuri_question">Which one\'s jinckuri name is %1$s</string>
    <string name="user_name_info">Name: %1$s</string>
    <string name="user_mail_info">Mail: %1$s</string>
    <string name="change_password">Change password</string>
    <string name="change">Change</string>
    <string name="max_repeat_info">Question count: %1$s</string>
    <string name="hint_count">Hint count: %1$d</string>
    <string name="get_information">About Game</string>
    <string name="select">Select !</string>
    <string name="naruto_icon">Naruto Icon</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="game_mode">Game Mode</string>
    <string name="history">Game History</string>
    <string name="sign_out">Sign Out</string>
    <string name="user">User</string>
    <string name="game">Game</string>
    <string name="close">Close</string>
    <string name="challenge_game">Challenge Game</string>
    <string name="welcome_text">In the Challenge game mode you have no wrong answers and you can only participate in the ranking with this mode. \n\nClassic allows you to test yourself on all characters. \n\nDon\'t forget to participate in special Akatsuki, Clans, Monsters and Teams game modes. \n\n\n Good luck shinobi!</string>
    <string name="about_the_game">About the game</string>
    <string name="market">Market</string>
    <string name="hint">Hint</string>
    <string name="purchase">Purchase</string>
    <string name="add">Add</string>
    <string name="student">Student</string>
    <string name="genin">Genin</string>
    <string name="chunin">Chūnin</string>
    <string name="kage">Kage</string>
    <string name="token_count">Token count: %1$d</string>
    <string name="gain_hint">You get %1$d hint!</string>
    <string name="connection_error">Connection Error</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="empty_edit_text">There is an empty place</string>
    <string name="password_not_equal">Passwords not equal !</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Account deleted.</string>
    <string name="question_number">Question number: %1$d</string>
    <string name="game_story_title">Hikaye</string>
    <string name="game_story_description">Naruto evreninin hikâyesini, senin için hazırlanan sorularla keşfet.</string>
    <string name="game_challenge_title">Meydan Okuma</string>
    <string name="game_challenge_description">Shinobi dünyasında hataya yer yoktur!</string>
    <string name="game_classic_title">Klasik</string>
    <string name="game_classic_description">Genel bilgini test etme vakti.</string>
    <string name="game_akatsuki_title">Akatsuki</string>
    <string name="game_akatsuki_description">Görevimiz, sahte barışı yıkmak.</string>
    <string name="game_clan_title">Klanlar</string>
    <string name="game_clan_description">Kökenini hatırla, klanını koru.</string>
    <string name="game_tailed_beast_title">Kuyruklu Canavarlar</string>
    <string name="game_tailed_beast_description">Burası canavarların dünyası.</string>
    <string name="game_teams_title">Takımlar</string>
    <string name="game_teams_description">Kurallara uymayanlar çöptür… Ama arkadaşlarını önemsemeyenler, çöpten de beterdir.</string>
    <string name="naruto_q01">Mizuki gecesinde Yasak Parşömen\'den Gölge Klon Tekniği\'ni öğrenen kimdir?</string>
    <string name="naruto_q02">Iruka\'nın kendi alın koruyucusunu hediye ettiği öğrenci kimdir?</string>
    <string name="naruto_q03">Chunin Sınavları\'nda Neji\'yi yenerek "kader" söylemine karşı duran kimdir?</string>
    <string name="naruto_q04">Gaara ile ilk büyük çarpışmada onu yenip değişimin kapısını aralayan kimdir?</string>
    <string name="naruto_q05">Jiraiya\'nın ölümünden sonra Myoboku Dağı\'nda Ermiş Modu\'nu öğrenen kimdir?</string>
    <string name="naruto_q06">Pain\'in Konoha\'ya saldırısında köyü kurtarıp Nagato\'yu ikna eden kimdir?</string>
    <string name="naruto_q07">Might Guy sekizinci kapıyı açtığında onu ölümden çeviren kimdir?</string>
    <string name="naruto_q08">Hagoromo\'dan Altı Yollar gücünü alan kimdir?</string>
    <string name="naruto_q09">Ichiraku tezgâhında ilk “ikram” ramenini alan küçük çocuk kimdir?</string>
    <string name="naruto_q10">Okulun bahçesindeki salıncakta tek başına oturan öksüz ve yetim kimdir?</string>
    <string name="naruto_q11">Zabuza Haku görevinde “ninja ne için savaşır” sorusuyla sarsılan kimdir?</string>
    <string name="naruto_q12">Konohamaru\'ya Rasengan\'ı öğreten kimdir?</string>
    <string name="naruto_q13">Tsunade\'yi Hokage olmayı kabul etmeye ikna eden kimdir?</string>
    <string name="naruto_q14">Edo Itachi ile birlikte Nagato\'yu durduran shinobi kimdir?</string>
    <string name="naruto_q15">Asura Path\'ın çivili saldırısından sonra Hinata\'yı görünce yeniden ayağa kalkan kimdir?</string>
    <string name="naruto_q16">Kaguya\'nın boyutunda, mühür vuruşunu Sasuke ile eş zamanlı yapan kimdir?</string>
    <string name="naruto_q17">Jiraiya\’nın kaybından sonra ustasının “gerçek kahraman” tarifini kendine hedef koyan kimdir?</string>
    <string name="sasuke_q01">Dalgaların Ülkesi köprüsünde Haku’nun iğnelerinin önüne atlayıp takım arkadaşını kurtaran kimdir?</string>
    <string name="sasuke_q02">Ormanın Derinlikleri aşamasında Orochimaru’nun Lanet Mührü’nü yiyen kimdir?</string>
    <string name="sasuke_q03">Chūnin Sınavı finallerinde Gaara’nın kumunu delmek için Chidori’yi sahaya ilk kez indiren kimdir?</string>
    <string name="sasuke_q04">Deidara’nın C0 intihar patlamasından Manda’yı çağırıp bedel ödeyerek sıyrılan kimdir?</string>
    <string name="sasuke_q05">Hebi’yi sonra Taka’yı atlatıp tek hedefli abisiyle yüzleşmek için yola çıkan kimdir?</string>
    <string name="sasuke_q06">Gök gürültüsünü “Kirin”e çevirip Uchiha kardeşlerin düellosunun seyrini değiştiren kimdir?</string>
    <string name="sasuke_q07">Gerçeği öğrendikten sonra Beş Kage Zirvesi’ni basıp Danzō’nun kalemini orada kıran kimdir?</string>
    <string name="sasuke_q08">Orochimaru’yu geri döndürüp Edo Hokage’leri çağırttırarak geçmişin hesabını bizzat soran kimdir?</string>
    <string name="sasuke_q09">Savaş bittiğinde köy koltuğunu değil, “gölgede gözcü” olmayı seçen kimdir?</string>
    <string name="sasuke_q10">Gençliğinde yılanların yolundan gidip sonra sözleşmesini “Şahin Çağırma”ya çeviren kimdir?</string>
    <string name="sasuke_q11">Kinshiki Momoshiki savaşında Naruto’yla omuz omuza kombine saldırılar kuran kimdir?</string>
    <string name="sasuke_q12">Zabuza Haku Sharingan’ını uyanışa taşıyan eşiği, buz aynalarının içinde geçen kimdir?</string>
    <string name="itachi_q01">Kakashi’yi Tsukuyomi ile üç günlük işkence süresine hapseden kimdir?</string>
    <string name="itachi_q02">“Nefret döngüsünü” sırtlanıp gölgelerden Konoha’yı koruyan kimdir?</string>
    <string name="itachi_q03">Orochimaru’nun beden çalma planını tek hamlede bozup ona Akatsuki’yi bıraktıran kimdir?</string>
    <string name="itachi_q04">Shisui’nin gözünü emanet alıp Kotoamatsukami’yi koruyan kimdir?</string>
    <string name="itachi_q05">Klan darbesini durdurmak için Konoha’ya karşı görünmez bir çifte ajan görevini üstlenen kimdir?</string>
    <string name="itachi_q06">Son karşılaşmada iki parmağını kardeşinin alnına dokundurup vedasını yapan kimdir?</string>
    <string name="itachi_q07">Kirin’in üzerine Susanoo’nun Yatay Aynası’nı indirerek saldırıyı nötrleyen kimdir?</string>
    <string name="itachi_q08">Kardeşinin’nin içinde beliren Orochimaru’yu Totsuka Kılıcı ile anında mühürleyen kimdir?</string>
</resources>