<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SignStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvRecovery"
        style="@style/LargeSizeMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/recovery"
        app:layout_constraintStart_toStartOf="@id/gdlFirstStartHorizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignPassword"
        style="@style/NormalSizeMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/gdlFirstStartHorizontal"
        app:layout_constraintTop_toBottomOf="@id/tvRecovery" />

    <EditText
        android:id="@+id/editMail"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:autofillHints="password"
        android:hint="@string/hint_email"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/gdlFirstStartHorizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSignPassword" />
    <Button
        android:id="@+id/btnForgot"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textColor="@color/hint_color"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineBtnStart"
        app:layout_constraintTop_toBottomOf="@id/editMail" />
    <TextView
        android:id="@+id/tvSignIn"
        style="@style/NormalSizeMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        android:text="@string/sign_in"
        android:textColor="@color/hint_color"
        app:layout_constraintBottom_toBottomOf="@id/btnForgot"
        app:layout_constraintEnd_toStartOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/btnForgot" />

    <TextView
        android:id="@+id/tvSlash"
        style="@style/NormalSizeMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        android:text="@string/slash"
        android:textColor="@color/hint_color"
        app:layout_constraintBottom_toBottomOf="@id/btnForgot"
        app:layout_constraintEnd_toStartOf="@id/btnForgot"
        app:layout_constraintTop_toTopOf="@id/btnForgot" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlFirstStartHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBtnStart"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/ivNaruto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:contentDescription="@string/naruto_image"
        app:layout_constraintTop_toBottomOf="@id/btnForgot"
        app:layout_constraintStart_toStartOf="@id/gdlFirstStartHorizontal"
        app:srcCompat="@drawable/naruto" />

</androidx.constraintlayout.widget.ConstraintLayout>